Fix <main> element's z-index

--- a/src/style.css
+++ b/src/style.css
@@ -49,7 +49,6 @@ a:hover {
 
 #canvas-container {
   position: absolute;
-  z-index: -1;
   top: 0;
   left: 0;
   width: 100%;
@@ -57,6 +56,7 @@ a:hover {
 }
 
 main {
+  position: relative;
   margin: 2em;
   background: #fff;
   color: #000;
